# private-machine

./: .env.example  .gitignore  LICENSE  README.md  app.py  app_debug.py  app_editor.py  app_telegram.py  backtest.py  cognitive_architecture_v2.drawio  cognitive_architecture_v3.drawio  config.json.example  config.yaml.example  congnitive_architecture_v1.drawio  duckdb_interface.py  import_from_csv.py  init_from_data.py  pm_graph_mem.py  pm_hypgraph.py  pm_lida.py  pm_lida_codelets.py  pm_world.py  read_chatlog.py  requirements.txt  requirements_linux_adapter.txt  run.py
game/: game.py
graphiti/: graphiti_llm.py
mcp_demo/: mcp_server.py
pm/: actions.py  cause_effect.py  character.py  character_card.py  codelet.py  config_loader.py  consts.py  controller.py  data_structures.py  dialog.py  graph_memory.py  log_utils.py  main_interface.py  memory_consolidation.py  mental_state_vectors.py  mental_states.py  multi_agent_manager.py  reply_consideration.py  sensation_evaluation.py  system.py  system_classes.py  system_gamemaster.py  system_read_chatlog.py  system_run.py  system_test.py  system_utils.py  thought_graph.py  thoughts.py  utils.py
pm_old/: log_utils.py  system_classes.py  system_run.py
quest/camera_stream/app/src/main/cpp/: CMakeLists.txt  native_passthrough_streamer.cpp  native_passthrough_streamer.h
synth_data/: synth_data1.txt
tests/: test_agent_manager.py  test_duplex_com.py  test_graph_mem.py  test_llm_completion.py  test_llm_manger_visual.py  test_llm_state_cache.py  test_memquery_queries.py  test_mental_states.py  test_mental_states_description.py  (+2 more)
(+299 files in other folders)
